tests started working

--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -3,10 +3,10 @@
 #=====================================================#
 
 #=================== Global configuration ============#
-url=https://www.gsmarena.com
-capabilities.browserName=NULL
-capabilities.browserVersion=NULL
-#selenium_url=http://localhost:4444/wd/hub
+url=https://www.saucedemo.com
+capabilities.browserName=chrome
+capabilities.browserVersion=*
+selenium_url=http://localhost:4444/wd/hub
 custom_capabilities=NULL
 extra_capabilities=NULL
 app_version=
@@ -23,6 +23,8 @@ app_version=
 env=DEMO
 DEMO.base=https://www.gsmarena.com
 DEMO.api_url=https://jsonplaceholder.typicode.com
+DEMO.api_url_dummyjson = https://dummyjson.com
+DEMO.api_url_dummyapi = https://dummyapi.io/data/v1
 STAG.api_url=
 DEMO.soap_url=https://www.crcind.com:443/csp/samples/SOAP.Demo.cls
 #=====================================================#
@@ -71,7 +73,7 @@ init_retry_interval=1
 
 #================ Report configuration ===============#
 core_log_level=INFO
-auto_screenshot=true
+auto_screenshot=false
 project_report_directory=./reports
 report_url=NULL
 max_screen_history=10
@@ -107,7 +109,7 @@ azure_local_storage=NULL
 #===================== Crypto ========================#
 crypto_key_value=OIujpEmIVZ0C9kOkXniFRw==
 #=====================================================#
-password={crypt:8O9iA4+f3nMzz85szmvKmQ==}
+#password={crypt:8O9iA4+f3nMzz85szmvKmQ==}
 credentials=test@gmail.com/${password}
 
 #==================== Proxy =====================#
