added onliner tests

--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -4,8 +4,8 @@
 
 #=================== Global configuration ============#
 url=https://www.saucedemo.com
-capabilities.browserName=chrome
-capabilities.browserVersion=*
+capabilities.browserName=Chrome
+capabilities.browserVersion=111.0
 selenium_url=http://localhost:4444/wd/hub
 custom_capabilities=NULL
 extra_capabilities=NULL
@@ -22,11 +22,11 @@ app_version=
 #=============== Environment configuration ===========#
 env=DEMO
 DEMO.base=https://www.gsmarena.com
-DEMO.api_url=https://jsonplaceholder.typicode.com
-DEMO.api_url_dummyjson = https://dummyjson.com
-DEMO.api_url_dummyapi = https://dummyapi.io/data/v1
+#DEMO.api_url=https://jsonplaceholder.typicode.com
+#DEMO.api_url_dummyjson = https://dummyjson.com
+#DEMO.api_url_dummyapi = https://dummyapi.io/data/v1
 STAG.api_url=
-DEMO.soap_url=https://www.crcind.com:443/csp/samples/SOAP.Demo.cls
+#DEMO.soap_url=https://www.crcind.com:443/csp/samples/SOAP.Demo.cls
 #=====================================================#
 
 #============== Locale Configurations ================#
