--- a/src/main/resources/_testdata.properties
+++ b/src/main/resources/_testdata.properties
@@ -3,3 +3,8 @@
 #===============================================================#
 
 test_credentials=test@gmail.com/{crypt:8O9iA4+f3nMzz85szmvKmQ==}
+onliner_username=vastapovich.laba@solvd.com
+password=onlinertest
+samsung_search_input=samsung galaxy a53
+invalid_onliner_username=qwerty
+invalid_password=1234
