added calculator tests

--- a/src/main/resources/_testdata.properties
+++ b/src/main/resources/_testdata.properties
@@ -8,3 +8,6 @@ password=onlinertest
 samsung_search_input=samsung galaxy a53
 invalid_onliner_username=qwerty
 invalid_password=1234
+zero_division=Can't divide by 0
+format_error=Format error
+negative_sqrt=Keep it real
