added weight calculator web test and cat facts api test

--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -3,13 +3,15 @@
 #=====================================================#
 
 #=================== Global configuration ============#
-url=https://www.saucedemo.com
+#url=https://www.saucedemo.com
+url=http://svyatoslav.biz/testlab/wt/
 capabilities.browserName=Chrome
 capabilities.browserVersion=111.0
-selenium_url=http://localhost:4444/wd/hub
+#selenium_url=http://localhost:4444/wd/hub
 custom_capabilities=NULL
 extra_capabilities=NULL
 app_version=
+
 
 #desired thread count for parallel execution. If commented "thread-count" value from TestNG suite xml is used.
 #thread_count=1
@@ -23,7 +25,7 @@ app_version=
 env=DEMO
 DEMO.base=https://www.gsmarena.com
 #DEMO.api_url=https://jsonplaceholder.typicode.com
-#DEMO.api_url_dummyjson = https://dummyjson.com
+DEMO.api_url_dummyjson = https://dummyjson.com
 #DEMO.api_url_dummyapi = https://dummyapi.io/data/v1
 STAG.api_url=
 #DEMO.soap_url=https://www.crcind.com:443/csp/samples/SOAP.Demo.cls
@@ -42,7 +44,7 @@ retry_count=0
 #=====================================================#
 
 #============== WebDriver configuration ==============#
-explicit_timeout=20
+explicit_timeout=100
 #number of extra retries to start driver session and interval in seconds
 init_retry_count=0
 init_retry_interval=1
@@ -50,13 +52,19 @@ init_retry_interval=1
 
 #uncomment and change udid and deviceName for Android test
 #============ Android Local Mobile ===================#
-#selenium_url=http://localhost:4723/wd/hub
 #capabilities.automationName=uiautomator2
 #capabilities.deviceName=<phone_name>
 #capabilities.udid=<phone_udid>
 #capabilities.deviceType=phone
 #capabilities.platformName=ANDROID
 #capabilities.app=https://qaprosoft.s3-us-west-2.amazonaws.com/carinademoexample.apk
+#selenium_url=http://localhost:4723/wd/hub
+capabilities.automationName=uiautomator2
+capabilities.deviceName=Pixel 2 API 30 2
+#capabilities.udid=emulator-5554
+capabilities.deviceType=phone
+capabilities.platformName=ANDROID
+capabilities.app=D:\\JavaTestAutomation\\androidapps\\Calculator_8.4 (503542421)_Apkpure.apk 
 #=====================================================#
 
 #uncomment and change deviceName and platformVersion for iOS test
